namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plateforme-electronique
  labels:
    app.kubernetes.io/name: plateforme-electronique
    app.kubernetes.io/managed-by: argocd
