invoice-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice-service
  template:
    metadata:
      labels:
        app: invoice-service
    spec:
      containers:
        - name: invoice-service
          image: yassmineg/plateforme-invoice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
