signature-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signature-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signature-service
  template:
    metadata:
      labels:
        app: signature-service
    spec:
      containers:
        - name: signature-service
          image: yassmineg/plateforme-signature:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
