subscription-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscription-service
  template:
    metadata:
      labels:
        app: subscription-service
    spec:
      containers:
        - name: subscription-service
          image: grassa77/plateforme-subscription:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
