user-auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-auth-service
  template:
    metadata:
      labels:
        app: user-auth-service
    spec:
      containers:
        - name: user-auth-service
          image: yassmineg/plateforme-userauth:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
