api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
