eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  selector:
    app: eureka-server
  type: ClusterIP
  ports:
    - port: 8761
      targetPort: 8761
