invoice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoice-service
spec:
  selector:
    app: invoice-service
  ports:
    - port: 8082
      targetPort: 8082
