signature-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signature-service
spec:
  selector:
    app: signature-service
  ports:
    - port: 8080
      targetPort: 8080
