subscription-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription-service
spec:
  selector:
    app: subscription-service
  ports:
    - port: 8080
      targetPort: 8080
