user-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-auth-service
spec:
  selector:
    app: user-auth-service
  ports:
    - port: 8081
      targetPort: 8081
